# MiniProjetCPP

./: CMakeLists.txt  README.md  main  main.cpp
functions/: bin  bin.cpp  bin.h  dec  dec.cpp  dec.h  hex.cpp  hex.h  octo.cpp  octo.h
